SERVER-62893: Coverity analysis defect 121337: Uninitialized scalar variable